// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error occurs when done pressed 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "#F5F5F5",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Title"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              undefined,
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Description
        </Text>
      </View>
      <TouchableHighlight
        onPress={[Function]}
        testID="edit-description"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Edit Description
            </Text>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              }
            }
          />
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Points"
          accessible={true}
          style={
            Object {
              "flex": 0,
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Points"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <TouchableHighlight
        accessibilityTraits="button"
        onPress={[Function]}
        testID="assignment-details.toggle-display-grade-as-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "flex": 1,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Display Grade As
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
      </TouchableHighlight>
      <View />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="publish."
          accessible={true}
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Publish
          </Text>
        </View>
        <RCTSwitch
          accessible={true}
          disabled={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTintColor="#ff0ee8"
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {},
            ]
          }
          testID="published"
          tintColor="#ff0ee8"
          value={false}
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "height": 54,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Add Due Date
            </Text>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`modal saving is shown on assignment update 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={true}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "#F5F5F5",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Title"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              undefined,
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Description
        </Text>
      </View>
      <TouchableHighlight
        onPress={[Function]}
        testID="edit-description"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Edit Description
            </Text>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              }
            }
          />
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Points"
          accessible={true}
          style={
            Object {
              "flex": 0,
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Points"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <TouchableHighlight
        accessibilityTraits="button"
        onPress={[Function]}
        testID="assignment-details.toggle-display-grade-as-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "flex": 1,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Display Grade As
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
      </TouchableHighlight>
      <View />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="publish."
          accessible={true}
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Publish
          </Text>
        </View>
        <RCTSwitch
          accessible={true}
          disabled={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTintColor="#ff0ee8"
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {},
            ]
          }
          testID="published"
          tintColor="#ff0ee8"
          value={false}
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "height": 54,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Add Due Date
            </Text>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;

exports[`renders 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Modal
    animationType="fade"
    hardwareAccelerated={false}
    supportedOrientations={
      Array [
        "portrait",
        "landscape",
      ]
    }
    transparent={true}
    visible={false}
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
            "justifyContent": "center",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(0,0,0,0.6)",
              "borderRadius": 12,
            },
            Object {
              "backgroundColor": "rgba(0,0,0,0.8)",
            },
            Object {
              "height": 170,
              "width": 170,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "column",
                "justifyContent": "center",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#fff",
                    "fontFamily": ".SFUIDisplay-semibold",
                    "fontSize": 24,
                  },
                  Array [
                    Object {
                      "alignItems": "center",
                      "color": "#fff",
                      "textAlign": "center",
                    },
                    undefined,
                  ],
                ]
              }
            >
              Saving
            </Text>
          </View>
        </View>
        <ActivityIndicator
          animating={true}
          color="#fff"
          hidesWhenStopped={true}
          size="large"
          style={
            Object {
              "flex": 1,
              "marginTop": -40,
            }
          }
        />
      </View>
    </View>
  </Modal>
  <RCTScrollView
    contentInset={
      Object {
        "bottom": 0,
      }
    }
    enableAutoAutomaticScroll={false}
    enableResetScrollToCoords={true}
    extraHeight={75}
    extraScrollHeight={0}
    keyboardDismissMode="interactive"
    keyboardShouldPersistTaps="handled"
    onScroll={[Function]}
    scrollEventThrottle={0}
    showsVerticalScrollIndicator={true}
    style={
      Object {
        "backgroundColor": "#F5F5F5",
        "flex": 1,
      }
    }
  >
    <View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Title
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Title"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "height": 45,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="titleInput"
          value="learn to write code"
        />
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            Array [
              undefined,
              Object {
                "marginTop": 0,
              },
            ],
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Description
        </Text>
      </View>
      <TouchableHighlight
        onPress={[Function]}
        testID="edit-description"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "borderTopColor": "#C7CDD1",
                "borderTopWidth": 0.5,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flexDirection": "row",
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Edit Description
            </Text>
          </View>
          <View
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "transparent",
                "borderColor": "#c7c7cc",
                "borderRightWidth": 2,
                "borderTopWidth": 2,
                "height": 10,
                "marginLeft": 7,
                "transform": Array [
                  Object {
                    "rotate": "45deg",
                  },
                ],
                "width": 10,
              }
            }
          />
        </View>
      </TouchableHighlight>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "#F5F5F5",
              "flex": 1,
              "flexDirection": "row",
              "height": 50,
              "justifyContent": "flex-start",
            },
            undefined,
          ]
        }
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          ellipsizeMode="tail"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "color": "#2D3B45",
                "fontFamily": ".SFUIDisplay-semibold",
                "fontSize": 20,
              },
              Object {
                "color": "#2D3B45",
                "marginBottom": 8,
                "marginLeft": 16,
                "marginTop": 16,
              },
            ]
          }
        >
          Details
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="Points"
          accessible={true}
          style={
            Object {
              "flex": 0,
              "height": 50,
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
        <TextInput
          blurOnSubmit={true}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Points"
          returnKeyType="done"
          style={
            Array [
              Object {
                "fontFamily": ".SFUIDisplay",
              },
              Object {
                "fontSize": 17,
              },
              Object {
                "textAlign": "right",
                "width": 50,
              },
              Object {
                "fontFamily": ".SFUIDisplay",
              },
            ]
          }
          testID="pointsInput"
          value="20"
        />
      </View>
      <TouchableHighlight
        accessibilityTraits="button"
        onPress={[Function]}
        testID="assignment-details.toggle-display-grade-as-picker"
        underlayColor="#eee"
      >
        <View
          style={
            Array [
              Object {
                "backgroundColor": "white",
                "paddingBottom": 8,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 8,
              },
              Object {
                "alignItems": "center",
                "borderBottomColor": "#C7CDD1",
                "borderBottomWidth": 0.5,
                "flex": 1,
                "flexDirection": "row",
                "height": 54,
                "justifyContent": "space-between",
              },
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "flex": 1,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Display Grade As
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                undefined,
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Points
          </Text>
        </View>
      </TouchableHighlight>
      <View />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "white",
              "paddingBottom": 8,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 8,
            },
            Object {
              "alignItems": "center",
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "flex": 1,
              "flexDirection": "row",
              "height": 54,
              "justifyContent": "space-between",
            },
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ]
        }
      >
        <View
          accessibilityLabel="publish."
          accessible={true}
          style={
            Object {
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "flex": 1,
                    "fontWeight": "600",
                  },
                  Object {
                    "flex": 0,
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Publish
          </Text>
        </View>
        <RCTSwitch
          accessible={true}
          disabled={false}
          onChange={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          onTintColor="#ff0ee8"
          onValueChange={[Function]}
          style={
            Array [
              Object {
                "height": 31,
                "width": 51,
              },
              Object {},
            ]
          }
          testID="published"
          tintColor="#ff0ee8"
          value={false}
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
              "borderTopColor": "#C7CDD1",
              "borderTopWidth": 0.5,
              "height": 54,
            }
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "white",
                "flex": 1,
                "flexDirection": "row",
                "paddingLeft": 16,
                "paddingRight": 16,
              }
            }
          >
            <Image
              source={1}
              style={
                Object {
                  "height": 18,
                  "marginRight": 8,
                  "tintColor": "#368BD8",
                  "width": 18,
                }
              }
            />
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#008EE2",
                    "fontSize": 16,
                    "fontWeight": "600",
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-semibold",
                  },
                ]
              }
            >
              Add Due Date
            </Text>
          </View>
        </TouchableHighlight>
        <View
          style={
            Object {
              "backgroundColor": "#F5F5F5",
              "height": 24,
            }
          }
        />
      </View>
    </View>
  </RCTScrollView>
</View>
`;
